cluster/infrastructure/gateway-config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: gateway
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: homelab-proxy-config
  addresses:
    - type: IPAddress
      value: 172.26.20.34
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls
            namespace: gateway
          - name: pihole-tls
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
