cluster/infrastructure/gateway-config/pihole-https-redirect.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-https-redirect
  namespace: gateway
spec:
  parentRefs:
    - name: homelab-gateway-internal
      namespace: gateway
      sectionName: http
  hostnames:
    - "pihole.martinez-saweczko.es"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
